--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
     background: #fff;
     height: 80px;
+    width: 100%;
+    position: fixed;
     box-shadow: 2px 2px 2px #e9e2e2;
 }
 
