--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,40 +1,40 @@
 .navbar-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #fff;
-    height: 80px;
-    width: 100%;
-    position: fixed;
-    box-shadow: 2px 2px 2px #e9e2e2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #fff;
+  height: 80px;
+  width: 100%;
+  top: 0;
+  position: fixed;
 }
 
 .logo {
-    width: 110px;
-    margin-left: 40px;
+  width: 110px;
+  margin-left: 40px;
 }
 
 .nav-list {
-    display: flex;
-    margin-right: 15%;
+  display: flex;
+  margin-right: 15%;
 }
 
 .nav-item {
-    list-style: none;
-    margin: 0px 20px;
-    padding: 0px 30px;
-    border-right: 2px solid #ece7e7;
+  list-style: none;
+  margin: 0px 20px;
+  padding: 0px 30px;
+  border-right: 2px solid #ece7e7;
 }
 
 .nav-links {
-    text-decoration: none;
-    color: #000;
-    font-weight: 600;
-    padding: 7px 0px;
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+  padding: 7px 0px;
 }
 
 @media (max-width: 776px) {
-    .nav-list {
-        display: none;
-    }
+  .nav-list {
+    display: none;
+  }
 }
