Started working on call to action Component

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -28,6 +28,7 @@
 
 .nav-links {
   text-decoration: none;
+  font-family: "Montserrat", sans-serif;
   color: #000;
   font-weight: 600;
   padding: 7px 0px;
