Started styling the HyperScale Component

--- a/src/Components/HyperScale/HyperScale.css
+++ b/src/Components/HyperScale/HyperScale.css
@@ -2,9 +2,21 @@
   padding: 50px;
 }
 
+.hyperscale-main-text {
+  position: relative;
+}
+
 .hyperscale-main-text > h3 {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 50px;
   line-height: 70px;
+  margin-top: 80px;
+}
+
+.hyper-img {
+  position: absolute;
+  right: 50px;
+  top: -70px;
+  width: 100px;
 }
