--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -4,5 +4,40 @@
 
 .about-info-image {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
   justify-content: center;
+}
+
+.about-text > h5 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.about-gif > img {
+  margin-top: 40px;
+}
+
+@media (max-width: 900px) {
+  .about-gif > img {
+    width: 360px;
+    margin-top: 15px;
+  }
+  .about-info-image {
+    gap: 10px;
+  }
+  .about-text > h5 {
+    width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .about-gif > img {
+    width: 700px;
+  }
+  .about-text > h5 {
+    width: 550px;
+  }
 }
