Started working on the Match Component

--- a/src/Components/NonZero/NonZero.css
+++ b/src/Components/NonZero/NonZero.css
@@ -29,7 +29,8 @@
 
 .non-zero-text > h3 {
   font-family: "Montserrat", sans-serif;
-  font-size: 50px;
+  font-size: 40px;
+  text-transform: uppercase;
   font-weight: 700;
   text-align: right;
 }
