Started working on the Footer Component

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer-container {
   padding: 50px;
+  font-family: "Montserrat", sans-serif;
   margin-top: 130px;
   background: #000;
   color: #fff;
