--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -23,4 +23,12 @@
 .footer-input {
   display: flex;
   margin-top: 20px;
+  align-items: center;
+}
+
+.footer-email {
+  height: 40px;
+  width: 200px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: transparent;
 }
