--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -23,12 +23,18 @@
 .footer-input {
   display: flex;
   margin-top: 20px;
+  font-family: "Montserrat", sans-serif;
   align-items: center;
 }
 
 .footer-email {
   height: 40px;
-  width: 200px;
+  width: 230px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   background: transparent;
+}
+
+.subscribe-button {
+  height: 40px;
+  width: 130px;
 }
