--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,11 +9,13 @@
 .footer-details {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
 }
 
 .footer-subscribe > h5 {
   color: #fff;
+  font-size: 20px;
 }
 
 .footer-text img {
@@ -23,7 +25,7 @@
 .footer-input {
   display: flex;
   margin-top: 20px;
-  font-family: "Montserrat", sans-serif;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -31,10 +33,23 @@
   height: 40px;
   width: 230px;
   border: 1px solid rgba(255, 255, 255, 0.5);
+  font-family: "Montserrat", sans-serif;
   background: transparent;
+}
+
+.footer-email::placeholder {
+  font-size: 15px;
+  padding-left: 5px;
 }
 
 .subscribe-button {
   height: 40px;
   width: 130px;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  margin-left: -7px;
+}
+
+.subscribe-button:hover {
+  cursor: pointer;
 }
