Working on responsiveness of the Newworld Component

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -68,6 +68,7 @@
   border-radius: 50%;
   position: absolute;
   right: 20px;
+  display: none;
 }
 
 .mobile-toggler:hover {
@@ -85,5 +86,6 @@
     display: none;
   }
   .mobile-toggler {
+    display: flex;
   }
 }
