--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,66 +1,71 @@
 .footer-container {
-  padding: 30px;
-  font-family: "Montserrat", sans-serif;
-  margin-top: 130px;
-  background: #000;
-  color: #fff;
+    padding: 30px;
+    font-family: "Montserrat", sans-serif;
+    margin-top: 130px;
+    background: #000;
+    color: #fff;
 }
 
 .footer-details {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.footer-subscribe > h5 {
-  color: #fff;
-  font-size: 20px;
+.footer-subscribe>h5 {
+    color: #fff;
+    font-size: 20px;
 }
 
 .footer-text img {
-  width: 120px;
+    width: 120px;
 }
 
 .footer-input {
-  display: flex;
-  margin-top: 20px;
-  flex-wrap: wrap;
-  align-items: center;
+    display: flex;
+    margin-top: 20px;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .footer-email {
-  height: 40px;
-  width: 230px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  font-family: "Montserrat", sans-serif;
-  background: transparent;
+    height: 40px;
+    color: #fff;
+    width: 230px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    font-family: "Montserrat", sans-serif;
+    background: transparent;
+}
+
+.footer-email:focus {
+    outline: none;
 }
 
 .footer-email::placeholder {
-  font-size: 15px;
-  padding-left: 5px;
+    font-size: 15px;
+    padding-left: 5px;
 }
 
 .subscribe-button {
-  height: 40px;
-  width: 130px;
-  font-weight: 600;
-  font-family: "Montserrat", sans-serif;
-  margin-left: -7px;
+    height: 40px;
+    width: 130px;
+    font-weight: 600;
+    font-family: "Montserrat", sans-serif;
+    margin-left: -7px;
 }
 
 .subscribe-button:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
-  .subscribe-button {
-    width: 100%;
-    margin-left: 0px;
-  }
-  .footer-email {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+    .subscribe-button {
+        width: 100%;
+        margin-left: 0px;
+    }
+    .footer-email {
+        width: 100%;
+        margin-bottom: 10px;
+    }
 }
