Made some changes with responsiveness

--- a/src/Components/HyperScale/HyperScale.css
+++ b/src/Components/HyperScale/HyperScale.css
@@ -22,6 +22,9 @@
 }
 
 @media (max-width: 800px) {
+  .hyperscale-container {
+    padding: 20px;
+  }
   .hyper-img {
     width: 70px;
     top: -50px;
