--- a/src/Components/Match/Match.css
+++ b/src/Components/Match/Match.css
@@ -24,7 +24,6 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 90px;
-  justify-content: center;
   gap: 100px;
 }
 
@@ -37,7 +36,7 @@
 
 @media (min-width: 768px) {
   .match-image > img {
-    width: 650px;
+    width: 750px;
   }
   .match-left-svg {
     display: none;
@@ -46,17 +45,18 @@
 
 @media (max-width: 800px) {
   .match-image > img {
-    width: 350px;
+    width: 100%;
   }
   .match-text-image {
     gap: 6px;
   }
   .match-text-details {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 19px;
+    width: 100%;
+    line-height: 23px;
   }
   .match-text-image {
-    gap: 50px;
+    gap: 20px;
     margin-top: 20px;
   }
   .match-container {
