Made some changes with responsiveness

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -60,6 +60,9 @@
 }
 
 @media (max-width: 600px) {
+  .footer-container {
+    margin-top: 40px;
+  }
   .subscribe-button {
     width: 100%;
     margin-left: 0px;
